--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Przeglądaj kalendarz"
+                    android:text="Check your bank activities"
                     android:textColor="@android:color/darker_gray" />
 
             </LinearLayout>
@@ -75,10 +75,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="true"
-                android:focusable="true"
                 android:gravity="center"
-                android:onClick="openAppointmentCreator"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:focusable="true">
 
                 <ImageView
                     android:layout_width="64dp"
@@ -133,6 +132,7 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:orientation="vertical"
+                android:onClick="showPatients"
                 android:focusable="true">
 
                 <ImageView
@@ -179,6 +179,7 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:orientation="vertical"
+                android:onClick="addPatient"
                 android:focusable="true">
 
                 <ImageView
@@ -219,6 +220,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></LinearLayout>
+
 </LinearLayout>
 
 
