--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,13 +58,14 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Przeglądaj kalendarz"
+                    android:text="Przeglądaj kalendarz z wizytami"
                     android:textColor="@android:color/darker_gray" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/bankcard"
             android:layout_width="160dp"
             android:layout_height="190dp"
             android:layout_margin="10dp"
@@ -79,6 +80,7 @@
                 android:gravity="center"
                 android:onClick="openAppointmentCreator"
                 android:orientation="vertical">
+
 
                 <ImageView
                     android:layout_width="64dp"
@@ -105,7 +107,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Check your bank activities"
+                    android:text="Dodaj wizytę do kalendarza"
                     android:textColor="@android:color/darker_gray" />
 
             </LinearLayout>
