--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="colorPrimary">#d7d7d7</color>
     <color name="colorPrimaryDark">#bfbfbf</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorAccent">#898989</color>
 
     <color name="blue">#33b5e5</color>
-    <color name="backgroundcolor">#fcfcfc</color>
-    <color name="lightgray">#ededed</color>
+    <color name="backgroundcolor">#ffffff</color>
+    <color name="lightgray">#ffffff</color>
     <color name="deeppurple">#7c4dff</color>
     <color name="yello">#ffb300</color>
     <color name="green">#00bfa5</color>
