database insert fixed

--- a/app/src/main/res/layout/activity_add_patient.xml
+++ b/app/src/main/res/layout/activity_add_patient.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.bodzio.doctorapp.MainActivity">
+    tools:context="com.example.bodzio.doctorapp.AddPatient">
 
 
     <LinearLayout
@@ -74,6 +74,7 @@
         android:id="@+id/addButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="add"
         android:text="Dodaj" />
 </LinearLayout>
 
