--- a/app/src/main/res/layout/activity_appcreator.xml
+++ b/app/src/main/res/layout/activity_appcreator.xml
@@ -161,14 +161,15 @@
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:onClick="saveData">
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="saveData"
             android:gravity="center"
             android:orientation="vertical">
 
