little changes in menu

--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.bodzio.doctorapp.MainActivity">
-
+    tools:context="com.example.bodzio.doctorapp.AddNotes">
 
     <LinearLayout
         android:clipToPadding="false"
