not finish things

--- a/app/src/main/res/layout/activity_appcreator.xml
+++ b/app/src/main/res/layout/activity_appcreator.xml
@@ -47,6 +47,18 @@
         android:textColorHint="@color/colorPrimaryDark"
         tools:focusableInTouchMode="true" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pesel" />
+
+    <EditText
+        android:id="@+id/peselText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="36dp" />
