--- a/app/src/main/res/layout/activity_show_patients.xml
+++ b/app/src/main/res/layout/activity_show_patients.xml
@@ -42,6 +42,7 @@
         android:id="@+id/addBuuton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="addPatient"
         android:text="dodaj" />
 
     <ListView
