--- a/app/src/main/res/layout/activity_appcreator.xml
+++ b/app/src/main/res/layout/activity_appcreator.xml
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="number" />
 
     <Space
         android:layout_width="match_parent"
