--- a/app/src/main/res/layout/activity_show_patients.xml
+++ b/app/src/main/res/layout/activity_show_patients.xml
@@ -30,7 +30,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Pesel"
-        android:inputType="number" />
+        android:inputType="number"
+        android:maxLength="11"/>
 
     <Button
         android:id="@+id/filtrButton"
