appointments listview displaying fixed

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -14,4 +14,9 @@
         app:mcv_showOtherDates="all"
         app:mcv_selectionColor="#fe104d" />
 
+    <ListView
+        android:id="@+id/listViewApp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
