--- a/app/src/main/res/layout/activity_custom.xml
+++ b/app/src/main/res/layout/activity_custom.xml
@@ -9,33 +9,23 @@
 
     <TextView
         android:id="@+id/textName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/userIcon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignBottom="@+id/userIcon"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/userIcon"
-        android:paddingLeft="50dp"
-        android:paddingRight="40dp"
-        android:text="Sarah"
+        android:text="Sarah Smith"
+        android:textAlignment="textStart"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30sp" />
+        android:textSize="22sp" />
 
-
-    <TextView
-        android:id="@+id/textSurname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textName"
-        android:layout_toRightOf="@+id/textName"
-        android:text="San Marco"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30sp" />
 
     <ImageView
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:id="@+id/userIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:src="@drawable/user_icon" />
 </RelativeLayout>
 
