--- a/app/src/main/res/layout/activity_custom_user.xml
+++ b/app/src/main/res/layout/activity_custom_user.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/textName"
-        android:layout_width="170dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/userIcon"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/userIcon"
-        android:text="Sarah"
+        android:text="Sarah Smith"
         android:textAlignment="textStart"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="22sp" />
@@ -27,16 +27,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/user_icon" />
-
-    <TextView
-        android:id="@+id/textSurname"
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textName"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textName"
-        android:text="Smith"
-        android:textSize="22sp" />
 </RelativeLayout>
 
 
