--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -18,13 +18,13 @@
     <EditText
         android:id="@+id/notesText"
         android:layout_width="match_parent"
-        android:layout_height="515dp"
+        android:layout_height="450dp"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="Wpisz notatke"
         android:inputType="textMultiLine"
         android:singleLine="false"
-        android:textAlignment="center"
-        android:background="@android:color/transparent"/>
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/addNoteBuuton"
