--- a/app/src/main/res/layout/activity_custom_user.xml
+++ b/app/src/main/res/layout/activity_custom_user.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="15dp"
     tools:context="com.example.bodzio.doctorapp.AddPatient">
 
 
@@ -13,20 +14,21 @@
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/userIcon"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/userIcon"
         android:text="Sarah Smith"
         android:textAlignment="textStart"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="22sp" />
+        android:textSize="18dp" />
 
 
     <ImageView
         android:id="@+id/userIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/user_icon" />
+        android:src="@drawable/ic_person_black_24dp" />
 </RelativeLayout>
 
 
