appointment creator, searching patients by pesel

--- a/app/src/main/res/layout/activity_appcreator.xml
+++ b/app/src/main/res/layout/activity_appcreator.xml
@@ -22,6 +22,7 @@
         android:backgroundTint="@color/colorPrimaryDark"
         android:imeOptions="actionDone"
         android:inputType="number"
+        android:maxLength="11"
         android:textColorHint="@color/colorPrimaryDark"
         tools:focusableInTouchMode="true" />
 
